# morela

./: README.md  morela.cabal  stack.yaml
app/: Main.hs
examples/: simple.mrl
src/Morela/: Config.hs  Parse.hs  Render.hs  Styles.hs  Types.hs
src/Morela/Writer/: SQL.hs
src/Text/Parsec/Morela/: Parser.hs
