name:                morela
version:             0.0.0.0
homepage:            https://github.com/kukimik/morela
license:             PublicDomain
license-file:        UNLICENSE
author:              Michał Kukieła
maintainer:          kukimik@poczta.onet.pl
category:            Database, Development
build-type:          Simple
cabal-version:       >=1.10

Tested-With:         GHC ==8.6.4 || ==8.4.4 || ==8.8.3 || ==8.10.1

synopsis:
  A relational database schema diagram generator from a plain text description.
description:
  morela transforms a plain text description of a relational database schema
  (including tables, their attributes and integrity constraints) to a
  graphical representation of that schema.

extra-source-files:
    Changelog.md

source-repository head
  type: git
  location: git://github.com/kukimik/morela.git

executable morela
  default-language: Haskell2010
  hs-source-dirs: app, src
  other-modules: Morela.Config
               , Morela.Parse
               , Morela.Render
               , Morela.Types
               , Morela.Writer.SQL
               , Text.Parsec.Morela.Parser
  main-is: Main.hs
  ghc-options: -Wall -W
  build-depends: base >= 4.5 && <5
               , bytestring == 0.10.*
               , containers >= 0.5.11.0
               , graphviz >= 2999.20.0.4
               , optparse-applicative >=0.14 && <0.17
               , parsec == 3.1.*
               , text == 1.*
               , word-wrap >= 0.4.1 && < 0.5
               , mtl >= 2.2.2 && < 2.3